--- a/_posts/2017-01-10-webgl.md
+++ b/_posts/2017-01-10-webgl.md
@@ -46,6 +46,7 @@ var canvas;
 var gl;
 var program;
 var attrPosition;
+var attrColor; // used later
 var unfmScale;
 var unfmAspect;
 var triangleBuffer;
@@ -218,3 +219,71 @@ Hopefully at this point you should be able to open your `index.html` and see thi
 <img src="{{ site.url }}/assets/webgl-tri-1.png" style="border:none; width: 100%;">
 
 If not, you can always refer to the sample code on this tutorial's [repository](https://github.com/lnpalmer/webgl-intro).
+
+Now that we have a working base example, let's add some more color to the scene. Previously our vertices had two numbers associated with each of them, an x-coordinate and a y-coordinate. Let's add a color to each vertex by adding a red, green, and blue value:
+
+~~~ js
+var triangleMesh = [
+  // x, y, r(ed), g(reen), b(lue)
+  -1, -.866, .2, .6, 1,
+  1, -.866, .6, 1, .2,
+  0, 1, 1, .2, .6
+];
+~~~
+
+We can modify our shader to use this color value for each vertex and blend smoothly between the three colors for each point of the triangle. We do this by declaring a variable with the `varying` keyword:
+
+~~~ js
+var glslVertexSource = `
+uniform float scale;
+uniform float aspect;
+attribute vec2 position;
+attribute vec3 color;
+varying vec3 _color;
+
+void main() {
+  gl_Position = vec4(position.x / scale / aspect, position.y / scale, 0.5, 1.0);
+  _color = color;
+}
+`;
+
+var glslFragmentSource = `
+precision mediump float;
+varying vec3 _color;
+
+void main() {
+  gl_FragColor = vec4(0.8, 0.5, 0.4, 1.0);
+}
+`;
+~~~
+
+We also need to explain the new vertex structure to OpenGL when we draw:
+
+~~~ js
+gl.bindBuffer(gl.ARRAY_BUFFER, triangleBuffer);
+gl.vertexAttribPointer(attrPosition, 2, gl.FLOAT, false, 4 * (2 + 3), 0);
+gl.vertexAttribPointer(attrColor, 3, gl.FLOAT, false, 4 * (2 + 3), 4 * 2);
+gl.drawArrays(gl.TRIANGLES, 0, 3);
+~~~
+
+Back in our `setup()` we need to add some extra calls:
+
+~~~ js
+void setup() {
+
+  // ...
+
+  attrPosition = gl.getAttribLocation(program, "position");
+  attrColor = gl.getAttribLocation(program, "color");
+
+  gl.enableVertexAttribArray(attrPosition);
+  gl.enableVertexAttribArray(attrColor);
+
+  // ...
+
+}
+~~~
+
+That's it! The fragment shader should now take the colors of the triangle's vertices and blend them to color each pixel. Here's what it (hopefully!) looks like:
+
+<img src="{{ site.url }}/assets/webgl-tri-2.png" style="border:none; width: 100%;">
