--- a/_posts/2017-01-10-webgl.md
+++ b/_posts/2017-01-10-webgl.md
@@ -257,6 +257,8 @@ void main() {
 `;
 ~~~
 
+`varying` allows us to pass discrete values for each vertex in the vertex shader, and then send that data to the fragment shader to interpolate smooth values for each pixel.
+
 We also need to explain the new vertex structure to OpenGL when we draw:
 
 ~~~ js
