--- a/_posts/2017-01-10-webgl.md
+++ b/_posts/2017-01-10-webgl.md
@@ -289,3 +289,5 @@ void setup() {
 That's it! The fragment shader should now take the colors of the triangle's vertices and blend them to color each pixel. Here's what it (hopefully!) looks like:
 
 <img src="{{ site.url }}/assets/webgl-tri-2.png" style="border:none; width: 100%;">
+
+*OpenGL is a large API with a lot of different features that can't be touched upon in a single tutorial; for further examples with OpenGL (and specifically WebGL), take a look at [WebGL Academy](http://webglacademy.com).*
