--- a/_posts/2017-01-10-webgl.md
+++ b/_posts/2017-01-10-webgl.md
@@ -263,7 +263,9 @@ We also need to explain the new vertex structure to OpenGL when we draw:
 
 ~~~ js
 gl.bindBuffer(gl.ARRAY_BUFFER, triangleBuffer);
+// vertices are (2 + 3) values, the first 2 are the position
 gl.vertexAttribPointer(attrPosition, 2, gl.FLOAT, false, 4 * (2 + 3), 0);
+// vertices are (2 + 3) values, the 3 after the first 2 are the color
 gl.vertexAttribPointer(attrColor, 3, gl.FLOAT, false, 4 * (2 + 3), 4 * 2);
 gl.drawArrays(gl.TRIANGLES, 0, 3);
 ~~~
@@ -290,4 +292,4 @@ That's it! The fragment shader should now take the colors of the triangle's vert
 
 <img src="{{ site.url }}/assets/webgl-tri-2.png" style="border:none; width: 100%;">
 
-*OpenGL is a large API with a lot of different features that can't be touched upon in a single tutorial; for further examples with OpenGL (and specifically WebGL), take a look at [WebGL Academy](http://webglacademy.com).*
+*OpenGL is a large API with a lot of different features that can't be touched upon in a single tutorial; for further examples with OpenGL, specifically WebGL, take a look at [WebGL Academy](http://webglacademy.com).*
