--- a/_posts/2017-01-10-webgl.md
+++ b/_posts/2017-01-10-webgl.md
@@ -81,7 +81,7 @@ gl.bindBuffer(gl.ARRAY_BUFFER, triangleBuffer);
 gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(triangleMesh), gl.STATIC_DRAW);
 ~~~
 
-In modern graphics frameworks, 'shaders' are written to process data; now that we have our vertex data loaded into OpenGL, we need to write a vertex shader and a fragment shader to process it. First, our vertex shader:
+In modern graphics frameworks, 'shaders' are written to process data; now that we have our vertex data loaded into OpenGL, we need to write a vertex shader and a fragment shader to draw each pixel. First, our vertex shader:
 
 ~~~ js
 var glslVertexSource = `
