--- a/_posts/2017-01-10-webgl.md
+++ b/_posts/2017-01-10-webgl.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Getting started with WebGL"
 excerpt: "OpenGL is a long-lasting 3D graphics standard that powers the majority of games and graphical applications; WebGL is a JavaScript API that allows us to use OpenGL inside a web browser environment."
-ready: false
+ready: true
 ---
 
 OpenGL is a long-lasting 3D graphics standard that powers the majority of games and graphical applications; [WebGL](https://get.webgl.org/) is a JavaScript API that allows us to use OpenGL inside a web browser environment. At the end of this tutorial we'll have code to render a triangle; on its own this will take a good amount of setup, but from there it doesn't take much more work to build more advanced things. Keep in mind that throughout this tutorial we'll pass over some chunks of code without going into too much detail about what's going on; OpenGL is a large API that's difficult to cover in detail in any single tutorial.
