--- a/_posts/2017-01-10-webgl.md
+++ b/_posts/2017-01-10-webgl.md
@@ -292,4 +292,4 @@ That's it! The fragment shader should now take the colors of the triangle's vert
 
 <img src="{{ site.url }}/assets/webgl-tri-2.png" style="border:none; width: 100%;">
 
-*OpenGL is a large API with a lot of different features that can't be touched upon in a single tutorial; for further examples with OpenGL, specifically WebGL, take a look at [WebGL Academy](http://webglacademy.com).*
+*As mentioned earlier, OpenGL is a large API with a lot of different features that can't be touched upon in a single tutorial; for further examples with OpenGL, specifically WebGL, take a look at [WebGL Academy](http://webglacademy.com).*
