--- a/_posts/2017-01-11-webgl.md
+++ b/_posts/2017-01-11-webgl.md
@@ -72,7 +72,7 @@ var triangleMesh = [
 ];
 ~~~
 
-OpenGL / WebGL has 'buffer' objects that allow us to store data on the graphics card for rendering; in our `setup()` we'll create a buffer and upload our mesh to it:
+OpenGL / WebGL has 'buffer' objects that allow us to store data on the GPU for rendering; in our `setup()` we'll create a buffer and upload our mesh to it:
 
 ~~~ js
 // create a buffer on the GPU and upload the triangle mesh to it
